--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
        </div>
      <div class="container">
-        <div id="todos">
+        <div id="Todos">
             
         </div>
         <form id="new-todo">
